# elin-fairy-pcc

./: .gitignore  README.md  package.xml  pyproject.toml  tasks.py
Actor/PCC/female/: pcc_body_fairyf.psd  pcc_body_fairyf1.ase  pcc_body_fairym1.ase  pcc_boots_fairy2.ase  pcc_cloth_fairy14.ase  pcc_cloth_fairy2.ase  pcc_cloth_fairy4.ase  pcc_cloth_fairy6.ase  pcc_cloth_fairy8.ase  pcc_cloth_fairy9.ase  pcc_eye_fairy1.ase  (+38 more)
Portrait/: c_f_fairy1.psd  c_f_fairy2.psd  c_f_fairy3.psd  c_f_fairy4.psd  c_f_fairy5.psd  c_m_fairy1.psd  special_f_fairy5.psd  special_f_fairy6.psd  special_m_fairy2.psd  ~template.psd
Template/: fairy_f_4.json  fairy_f_5.json  fairy_f_6.json  fairy_f_7.json  fairy_m_3.json
User/PCC/: fairy1.json  fairy2.json  fairy3.json  fairy4.json  fairy5.json  fairy6.json  fairy_f_4.json  fairy_m_1.json
dev/: build.py  build_and_deploy.py  copy_templates.py  deploy.py  install_templates.py  layer_comps.py  project.py  rename_layer_comps.py  rename_portrait_layer_comps.py  unfold.py
dev/aseprite/: elin-base.pal  elin-pcc.lua  elin.lua  install-aseprite-extensions.py  install-aseprite-scripts.py
lib/: project.py
site/: 1.1.psd  comparison.ase  default_pcc.ase  fairy_pcc.ase  portraits.psd  sprite_showcase.aseprite
src/Portrait/: special_f_fairy1.psd  special_f_fairy2.psd  special_f_fairy3.psd  special_f_fairy4.psd  special_f_fairy5.psd  special_f_fairy6.psd  special_f_fairy7.psd  special_m_fairy3.psd
src/Template/: fairy_f_2.json  fairy_f_5.json  fairy_f_6.json
template/: fairy_f_1.json  fairy_f_3.json  fairy_m_1.json  fairy_m_2.json
(+38 files in other folders)
