[project]
name = "n15g_fairies"
version = "1.1.1"
description = """I love that Elin lets you play as a fairy character, but was disappointed that the base
        game doesn't really offer any way to visually differentiate a fairy character from the other
        races.

        This mod adds new portraits and sprites for fairy characters that are much smaller than the default sprites,
        including a bunch of pretty fairy wings."""
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "invoke (>=2.2.0,<3.0.0)",
    "toml (>=0.10.2,<0.11.0)",
    "chevron (>=0.14.0,<0.15.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.elin]
package-name = "N15g_Fairy_PCC"
title = "N15g Fairy PCC"
author = "N15g"
tags = "PCC,Portrait"
